Add logo and update UI settings; modify HTML and CSS for branding

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,17 +9,14 @@ body {
   padding: 0;
 }
 
+@font-face {
+  font-family: 'Guentner Simplon Regular';
+  src: local('Guentner-Simplon-Regular'), url('./assets/fonts/News-Gothic-Demi-Regular.otf');
+}
+
 html {
   background: #f2f2f2;
-  font-family:
-    'Segoe UI',
-    'Segoe UI Web (West European)',
-    'Segoe UI',
-    -apple-system,
-    BlinkMacSystemFont,
-    Roboto,
-    'Helvetica Neue',
-    sans-serif;
+  font-family: 'Guentner Simplon Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
