fix: removed clear chat button and reduced height of question field on mobile

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -372,8 +372,9 @@ a {
 
 @media (max-width: 480px) {
   .chatInput {
-    width: 90%;
-    max-width: 90%;
+    width: 100%;
+    margin-bottom: 0px;
+    max-width: 100%;
   }
 
   .newChatIcon {
