--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -1,7 +1,7 @@
 .questionInputContainer {
   height: 120px;
   position: absolute;
-  left: 6.5%;
+  left: 0%;
   right: 0%;
   top: 0%;
   bottom: 0%;
@@ -57,12 +57,6 @@
   height: 30px;
 }
 
-@media (max-width: 480px) {
-  .questionInputContainer {
-    left: 16.5%;
-  }
-}
-
 .fileInputContainer {
   position: absolute;
   right: 24px;
@@ -93,4 +87,20 @@
 
 .uploadedImage {
   margin-right: 70px;
+}
+
+@media (max-width: 480px) {
+  .questionInputContainer {
+    left: 0%;
+    height: 90px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .fileIcon {
+    font-size: 20px;
+  }
+  .questionInputSendButtonDisabled {
+    width: 20px;
+    height: 20px;
+  }
 }
