feat: styling overhaul

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -3,13 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 8.1285px;
+  padding: 20px;
   gap: 5.42px;
-  background: #ffffff;
-  box-shadow:
-    0px 1px 2px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 5.419px;
+  border: 1px solid #ff4c00;
+  border-radius: 18px;
 }
 
 .answerText {
@@ -17,7 +14,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #323130;
+  color: white;
   flex: none;
   order: 1;
   align-self: stretch;
@@ -181,6 +178,7 @@
 }
 
 .copyButton {
+  color: white;
   position: absolute;
   top: 5px;
   right: 5px;
