--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 html {
-  background: #f2f2f2;
+  background: white;
   font-family:
     'Segoe UI',
     'Segoe UI Web (West European)',
