--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -1,4 +1,5 @@
 .container {
+  height: 100vh;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -20,13 +21,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #ffffff 57.29%, #eef6fe 100%);
+  background: #111111;
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 8px;
   overflow-y: auto;
-  max-height: calc(100vh - 100px);
+  height: 100vh;
 }
 
 .chatEmptyState {
@@ -70,7 +70,8 @@
   flex-grow: 1;
   max-width: 1028px;
   width: 100%;
-  overflow-y: auto;
+  overflow-y: visible;
+  word-break: break-all;
   padding-left: 24px;
   padding-right: 24px;
   display: flex;
@@ -84,30 +85,38 @@
   margin-bottom: 12px;
 }
 
+.chatLoadingContainer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 5.42px;
+  border: 1px solid #ff4c00;
+  border-radius: 18px;
+}
+
 .chatMessageUserMessage {
+  color: white;
   position: relative;
   display: flex;
   padding: 20px;
-  background: #edf5fd;
-  border-radius: 8px;
-  box-shadow:
-    0px 2px 4px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
+  border: 2px solid #333333;
+  border-radius: 18px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-  color: #242424;
   order: 0;
   flex-grow: 0;
   white-space: pre-wrap;
   word-wrap: break-word;
-  max-width: 80%;
+  max-width: 60%;
 }
 
 .chatMessageGpt {
   margin-bottom: 12px;
-  max-width: 80%;
+  max-width: 60%;
   display: flex;
 }
 
@@ -211,14 +220,14 @@
   height: 32px;
   left: calc(50% - 161px / 2 + 25.8px);
   bottom: 116px;
-  border: 1px solid #d1d1d1;
+  border: 1px solid white;
   border-radius: 16px;
 }
 
 .stopGeneratingIcon {
   width: 14px;
   height: 14px;
-  color: #424242;
+  color: white;
 }
 
 .stopGeneratingText {
@@ -230,7 +239,7 @@
   line-height: 20px;
   display: flex;
   align-items: center;
-  color: #242424;
+  color: white;
   flex: none;
   order: 0;
   flex-grow: 0;
