--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -110,7 +110,7 @@
   order: 0;
   flex-grow: 0;
   white-space: pre-wrap;
-  word-wrap: break-word;
+  word-wrap: auto;
   max-width: 60%;
 }
 
@@ -122,15 +122,13 @@
 
 .chatMessageError {
   padding: 20px;
-  border-radius: 8px;
-  box-shadow:
-    rgba(182, 52, 67, 1) 1px 1px 2px,
-    rgba(182, 52, 67, 1) 0px 0px 1px;
-  color: #242424;
+  border-radius: 18px;
+  color: red;
+  border: 1px solid red;
   flex: none;
   order: 0;
   flex-grow: 0;
-  max-width: 800px;
+  max-width: 80%;
   margin-bottom: 12px;
 }
 
@@ -141,7 +139,7 @@
   font-size: 14px;
   line-height: 22px;
   white-space: pre-wrap;
-  word-wrap: break-word;
+  word-wrap: auto;
   gap: 12px;
   align-items: center;
 }
@@ -384,6 +382,14 @@ a {
     width: 100%;
     margin-bottom: 0px;
     max-width: 100%;
+  }
+
+  .chatMessageUserMessage {
+    max-width: 80%;
+  }
+
+  .chatMessageGpt {
+    max-width: 80%;
   }
 
   .newChatIcon {
