disclaimer color change

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -53,7 +53,7 @@
   display: flex;
   align-items: center;
   text-align: center;
-  color: #707070;
+  color: white;
   flex: none;
   order: 1;
   flex-grow: 0;
