--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -22,9 +22,6 @@
   flex-direction: column;
   align-items: center;
   background: #111111;
-  box-shadow:
-    0px 2px 4px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
   overflow-y: auto;
   height: 100vh;
 }
@@ -39,6 +36,7 @@
 
 .chatEmptyStateTitle {
   font-style: normal;
+  color: white;
   font-weight: 700;
   font-size: 36px;
   display: flex;
@@ -58,7 +56,7 @@
   align-items: flex-end;
   text-align: center;
   letter-spacing: -0.01em;
-  color: #616161;
+  color: white;
 }
 
 .chatIcon {
@@ -153,7 +151,7 @@
   padding-bottom: 24px;
   padding-left: 24px;
   padding-right: 24px;
-  width: calc(100% - 100px);
+  width: 100%;
   max-width: 1028px;
   margin-bottom: 50px;
   margin-top: 8px;
@@ -381,7 +379,6 @@ a {
 
 @media (max-width: 480px) {
   .chatInput {
-    width: 100%;
     margin-bottom: 0px;
     max-width: 100%;
   }
@@ -407,6 +404,7 @@ a {
   }
 
   .chatEmptyStateTitle {
+    color: white;
     line-height: 36px;
   }
 
