--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -13,7 +13,7 @@
   max-width: 1200px;
   background-color: #111111;
   padding-bottom: 20px;
-  height: 120px;
+  min-height: 120px;
 }
 
 .questionInputTextArea {
