--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -250,7 +250,7 @@
   align-items: flex-start;
   padding: 16px 16px;
   gap: 8px;
-  background: #ffffff;
+  background: #222222;
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
@@ -262,6 +262,7 @@
   max-width: 30%;
   overflow-y: scroll;
   max-height: calc(100vh - 100px);
+  z-index: 10;
 }
 
 .citationPanelHeaderContainer {
@@ -273,7 +274,7 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
-  color: #000000;
+  color: white;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -295,7 +296,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  color: #323130;
+  color: white;
   margin-top: 12px;
   margin-bottom: 12px;
 }
@@ -310,7 +311,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #000000;
+  color: white;
   flex: none;
   order: 1;
   align-self: stretch;
