fix: color changes to yellow

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   padding: 20px;
   gap: 5.42px;
-  border: 1px solid #ff4c00;
+  border: 1px solid #fbdd6e;
   border-radius: 18px;
 }
 
