--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -74,14 +74,13 @@
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
-
-  color: #115ea3;
+  color: #1573c5;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 4px 6px;
   gap: 4px;
-  border: 1px solid #d1d1d1;
+  border: 1px solid #cdcdcd;
   border-radius: 4px;
 }
 
@@ -99,8 +98,6 @@
   padding: 0px;
   width: 14px;
   height: 14px;
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
   flex: none;
   flex-grow: 0;
   font-style: normal;
@@ -108,7 +105,7 @@
   font-size: 10px;
   line-height: 14px;
   text-align: center;
-  color: #424242;
+  color: #cdcdcd;
   cursor: pointer;
 }
 
@@ -124,7 +121,7 @@
   align-items: center;
   padding: 0px;
   margin-top: 4px;
-  color: #616161;
+  color: #cdcdcd;
   font-size: 10px;
 }
 
@@ -141,7 +138,7 @@
   line-height: 16px;
   display: flex;
   align-items: center;
-  color: #616161;
+  color: #cdcdcd;
 }
 
 .accordionTitle:hover {
