feat: add natuvion styling
- add natuvion palette
- override microsoft styles
- use natuvion colors in all components
- add natuvion svg logo
- add natuvion favicon
- change default backend app settings

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -76,7 +76,7 @@
   font-size: 12px;
   line-height: 16px;
 
-  color: #115ea3;
+  color: var(--natuvion-600);
   display: flex;
   flex-direction: row;
   align-items: center;
