--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -1,48 +1,59 @@
 .shareButtonRoot {
-  width: 86px;
-  height: 32px;
-  border-radius: 4px;
-  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0f6cbd 33.63%, #2d87c3 70.31%, #8dddd8 100%);
-  padding: 5px 12px;
+    width: 86px;
+    height: 32px;
+    border-radius: 4px;
+    background: radial-gradient(
+            109.81% 107.82% at 100.1% 90.19%,
+            var(--natuvion-600) 33.63%,
+            var(--natuvion-500) 70.31%,
+            var(--natuvion-200) 100%
+    );
+    padding: 5px 12px;
 }
 
 .shareButtonRoot:hover {
-  background: linear-gradient(135deg, #0f6cbd 0%, #2d87c3 51.04%, #8dddd8 100%);
+    background: linear-gradient(
+            135deg,
+            var(--natuvion-600) 0%,
+            var(--natuvion-500) 51.04%,
+            var(--natuvion-200) 100%
+    );
 }
 
 .shareButtonRoot span {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  color: #ffffff;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
 }
 
 .shareButtonRoot i,
 .shareButtonRoot:hover i {
-  color: #ffffff !important;
+    color: #ffffff !important;
 }
 
 .historyButtonRoot {
-  width: 180px;
-  border: 1px solid #d1d1d1;
+    width: 180px;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
 }
 
 .historyButtonRoot:hover {
-  border: 1px solid #d1d1d1;
+    border: 1px solid #d1d1d1;
 }
 
 .historyButtonRoot:active {
-  border: 1px solid #d1d1d1;
+    border: 1px solid #d1d1d1;
 }
 
 @media (max-width: 480px) {
-  .shareButtonRoot {
-    width: auto;
-    padding: 5px 8px;
-  }
+    .shareButtonRoot {
+        width: auto;
+        padding: 5px 8px;
+    }
 
-  .historyButtonRoot {
-    width: auto;
-    padding: 0 8px;
-  }
+    .historyButtonRoot {
+        width: auto;
+        padding: 0 8px;
+    }
 }
