feat: add question from query
- add initial loading until chat history is loaded
- add loading spinner
- override ms spinner color
- change title
- add automatic message send if initial value is present
- fix icon loading (add icons locally)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,6 +57,10 @@ html {
     border: 1px solid var(--natuvion-600);
 }
 
+.ms-Spinner-circle {
+    color: var(--natuvion-600);
+    border-color: var(--natuvion-600) var(--natuvion-200) var(--natuvion-200);
+}
 
 :root {
     --natuvion-50: #f0fdf3;
