--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-  background-color: #f2f2f2;
+  background-color: transparent;
 }
 
 .headerContainer {
@@ -17,23 +17,23 @@
 .headerTitleContainer {
   display: flex;
   align-items: center;
-  margin-left: 14px;
+  margin-left: 7px;
   text-decoration: none;
 }
 
 .headerTitle {
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 15px;
+  line-height: 2;
   display: flex;
   align-items: flex-end;
-  color: #242424;
+  color: var(--picis-blue-700);
 }
 
 .headerIcon {
-  height: 32px;
-  width: auto;
+  width: 138px;
+  height: 54px;
   margin-left: 36px;
 }
 
