--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -79,14 +79,15 @@ div:has([role="separator"])::before {
 
 .chatEmptyStateTitle {
   font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
+  font-weight: 100;
+  font-size: 42px;
   display: flex;
   align-items: flex-end;
   text-align: center;
   line-height: 24px;
   margin-top: 36px;
   margin-bottom: 0px;
+  color: var(--picis-blue-700);
 }
 
 .chatEmptyStateSubtitle {
