--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -1,35 +1,39 @@
 .questionInputContainer {
-  height: 120px;
-  position: absolute;
-  left: 6.5%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   background: #ffffff;
   box-shadow:
-    0px 8px 16px rgba(0, 0, 0, 0.14),
-    0px 0px 2px rgba(0, 0, 0, 0.12);
+  0px 8px 16px rgba(0, 0, 0, 0.14),
+  0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 8px;
+  padding: 10px;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
 }
 
 .questionInputTextArea {
   width: 100%;
-  line-height: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 12px;
-  margin-right: 12px;
+  resize: vertical;
+  padding: 8px 50px;
+  box-sizing: border-box;
+  border: none;
+  flex-grow: 1;
 }
 
 .questionInputSendButtonContainer {
   position: absolute;
   right: 24px;
   bottom: 20px;
+  z-index: 1;
 }
 
 .questionInputSendButton {
-  width: 24px;
-  height: 23px;
+  position: absolute;
+  right: 24px;
+  top: 20px;
+  z-index: 1;
 }
 
 .questionInputSendButtonDisabled {
