--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -56,7 +56,7 @@
   font-size: 16px;
   line-height: 150%;
   align-items: flex-end;
-  text-align: center;
+  text-align: left;
   letter-spacing: -0.01em;
   color: #616161;
   max-width: 800px;
